学习数据类型 使用

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,12 @@
             android:textAllCaps="false"
             android:text="javanative"
             />
+        <Button
+            android:id="@+id/datatype"
+            android:layout_columnWeight="1"
+            android:textAllCaps="false"
+            android:text="datatype"
+            />
 
     </GridLayout>
 
