实现hash 加密 md5 sha1 sha256

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,12 @@
             android:textAllCaps="false"
             android:text="datatype"
             />
+        <Button
+            android:id="@+id/hash"
+            android:layout_columnWeight="1"
+            android:textAllCaps="false"
+            android:text="hash"
+            />
 
     </GridLayout>
 
